# bistro-board

./: .gitignore  README.md  philos_sales.db  pyproject.toml
.agents/: AGENTS.md
docs/: postgres_setup.md  settings_tab_proposal.md
web/: README.md  drizzle.config.ts  package-lock.json  package.json
web/scripts/: migrate-data.ts
web/src/: app.css
web/src/lib/server/db/: schema.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/businesses/: +page.server.ts  +page.svelte
web/src/routes/sales/: +page.server.ts  +page.svelte
